[package]
name = "shakenc-flip-web"
version = "0.1.0"
edition = "2024"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/shakenc-flip-web"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cshake = { git = "https://github.com/Berylsoft/keccak-state" }

[profile.release]
lto = true
